# finance_tracker

./: .gitignore  async_demo.py  pyproject.toml  review_task1.py  review_task2.py  review_task3.py  sync_demo.py
Sprint1_tasks/: file_io_demo.py  typing_demo.py
Sprint2_tasks/app/: Readme.md  main.py
Sprint2_tasks/app/routes/: test.py  test2.py  wallets.py
app/: database.py  main.py  schemas.py
app/repositories/: wallet_repository.py
app/routes/: wallets.py
database/: database.py  schema.sql
scripts/: add_deleted_at.py  create_tables.py  test_db.py  test_wallet_repo.py
